Requisition edit, details and list updated

--- a/RMS.App/Views/Requisitions/Create.cshtml
+++ b/RMS.App/Views/Requisitions/Create.cshtml
@@ -80,6 +80,7 @@
             <th>Return Date Time</th>
             <th>Passenger Qty</th>
             <th>Submited Date Time</th>
+            <th>Requisition Type</th>
             <th>Request For</th>
             <th>Description</th>
         </tr>
@@ -106,6 +107,7 @@
                         <td>@item.EndDateTime</td>
                         <td>@item.PassengerQty</td>
                         <td>@item.SubmitDateTime</td>
+                        <td>@item.RequisitionType</td>
                         <td>@item.RequestFor</td>
                         <td>@item.Description</td>
                     </tr>
@@ -123,6 +125,7 @@
             <th>Return Date Time</th>
             <th>Passenger Qty</th>
             <th>Submited Date Time</th>
+            <th>Requisition Type</th>
             <th>Request For</th>
             <th>Description</th>
         </tr>
