--- a/RMS.App/Views/Requisitions/RequisitionList.cshtml
+++ b/RMS.App/Views/Requisitions/RequisitionList.cshtml
@@ -5,12 +5,17 @@
 }
 @if (TempData["msg"] != null)
 {
-    <div class="alert alert-warning">
+    <div class="alert alert-success">
         @Html.Raw(TempData["msg"])
     </div>
 }
-
-<div style="margin-left: 15px;">
+@if (TempData["msg1"] != null)
+{
+    <div class="alert alert-warning">
+        @Html.Raw(TempData["msg1"])
+    </div>
+}
+<div style="margin-left: 15px;" class="responsive">
     <p>
         @Html.ActionLink("Create New", "Create", null, htmlAttributes: new {@class = "btn btn-success"})
     </p>
@@ -33,10 +38,14 @@
                 @Html.DisplayNameFor(model => model.Requisition.EndDateTime)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
+                @Html.DisplayNameFor(model => model.StatusType)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StatusType)
+                @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
+            </th>
+            
+            <th>
+                @Html.DisplayNameFor(model=>model.Requisition.RequisitionType)
             </th>
             <th>
                 Action
@@ -70,14 +79,21 @@
                             @Html.DisplayFor(modelItem => item.Requisition.EndDateTime)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Requisition.SubmitDateTime)
-                        </td>
-                        <td>
                             @Html.DisplayFor(modelItem => item.StatusType)
                         </td>
                         <td>
-                            @Html.ActionLink("Edit", "Edit", new {id = item.RequisitionId}) |
-                            @Html.ActionLink("Details", "Details", new {id = item.Requisition.Id}) |
+                            @Html.DisplayFor(modelItem => item.Requisition.SubmitDateTime)
+                        </td>
+                        
+                        <td>
+                            @Html.DisplayFor(modelItem=>item.Requisition.RequisitionType)
+                        </td>
+                        <td>
+                            @if (item.StatusType == "New")
+                            {
+                                @Html.ActionLink("Edit", "Edit", new { id = item.RequisitionId })
+                            } &nbsp;
+                            @Html.ActionLink("Details", "Details", new {id = item.Requisition.Id}) &nbsp;
                             @Html.ActionLink("Feedback", "Feedback", new {requisitionId = item.Id})
 
                         </td>
@@ -111,10 +127,14 @@
                 @Html.DisplayNameFor(model => model.Requisition.EndDateTime)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
+                @Html.DisplayNameFor(model => model.StatusType)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StatusType)
+                @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
+            </th>
+            
+            <th>
+                @Html.DisplayNameFor(model => model.Requisition.RequisitionType)
             </th>
             <th>
                 Action
