--- a/RMS.App/Views/AssignRequisitions/Index.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Index.cshtml
@@ -105,8 +105,8 @@
                         </td>
                         <td>
                             @*@Html.ActionLink("Edit", "Edit", new {id = item.RequisitionId}) |*@
-                            @Html.ActionLink("Details", "Details", new {id = item.Requisition.Id}, new { @class = "btn btn-primary" }) |
-                            @*@Html.ActionLink("Feedback", "Feedback", new {requisitionId = item.Id})*@
+                            @Html.ActionLink("Details", "Details", new {id = item.Requisition.Id}, new { @class = "btn btn-primary" }) &nbsp;&nbsp;
+                            @Html.ActionLink("Print & Preview", "PrintDetails", new { id = item.Id }, new { @class = "btn btn-primary" })&nbsp;&nbsp;
                             @Html.ActionLink("CheckOut", "CheckOut", "GatePass", new { id = item.Id }, new { @class = "btn btn-primary" })
 
                         </td>
