--- a/RMS.App/Views/AssignRequisitions/CompleteRequest.cshtml
+++ b/RMS.App/Views/AssignRequisitions/CompleteRequest.cshtml
@@ -29,7 +29,7 @@
         </div>
     }
 
-    <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: auto">
+    <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
         <thead>
             <tr class="bg-info">
                 <th>
@@ -103,10 +103,7 @@
                                 @Html.DisplayFor(modelItem => item.StatusType, new { @class = "text-danger" })
                             </td>
                             <td>
-                                @*@Html.ActionLink("Edit", "Edit", new {id = item.RequisitionId}) |*@
-                                @Html.ActionLink("Details", "Details", new { id = item.Requisition.Id }, new { @class = "btn btn-primary" }) |
-                                @*@Html.ActionLink("Feedback", "Feedback", new {requisitionId = item.Id})*@
-
+                                @Html.ActionLink("Details", "Details", new { id = item.Requisition.Id }, new { @class = "btn btn-primary" })
                             </td>
                         </tr>
                     }
@@ -114,7 +111,7 @@
                 else
                 {
                     <tr>
-                        <td class="text-center text-danger" colspan="7"> Data Not Found!</td>
+                        <td class="text-center text-danger" colspan="10"> Data Not Found!</td>
                     </tr>
                 }
             }
