--- a/RMS.App/Views/AssignRequisitions/Index.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Index.cshtml
@@ -30,7 +30,7 @@
         </div>
     }
 
-    <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: auto">
+    <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
         <thead>
         <tr class="bg-info">
             <th>
@@ -116,7 +116,7 @@
             else
             {
                 <tr>
-                    <td class="text-center text-danger" colspan="7"> Data Not Found!</td>
+                    <td class="text-center text-danger" colspan="10"> Data Not Found!</td>
                 </tr>
             }
         }
