--- a/RMS.App/Views/Departments/Index.cshtml
+++ b/RMS.App/Views/Departments/Index.cshtml
@@ -20,24 +20,11 @@
             @Html.Raw(TempData["msg"])
         </div>
     }
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
-                <p>
-                    @Html.ActionLink("Create New", "Create", null, new {@class = "btn btn-success"})
-                </p>
-            </div>
-            @*<div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
-                <p>
-                    @using (Html.BeginForm("Index", "Departments", FormMethod.Get))
-                    {
-                        <b>Search by (Organization/Department/Code) </b>
-                        @Html.TextBox("searchText")
-                        <input type="submit" value="Search" />
-                    }
-                </p>
-            </div>*@
-        </div>
+    <div class="row">
+
+        <p>
+            @Html.ActionLink("Create New", "Create", null, new {@class = "btn btn-success"})
+        </p>
     </div>
     <br/>
     <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
