--- a/RMS.App/Views/Designations/Index.cshtml
+++ b/RMS.App/Views/Designations/Index.cshtml
@@ -21,25 +21,12 @@
             @Html.Raw(TempData["msg"])
         </div>
     }
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
+    <div class="row">
+
                 <p>
                     @Html.ActionLink("Create New", "Create", null, new {@class = "btn btn-success"})
                 </p>
-            </div>
 
-            @*<div class="col-lg-6 col-sm-6 col-8 text-right no-padding">
-            <p>
-                @using (Html.BeginForm("Index", "Designations", FormMethod.Get))
-                {
-                    <b>Search by (Title)</b>
-                    @Html.TextBox("searchText")
-                    <input type="submit" value="Search"/>
-                }
-            </p>
-        </div>*@
-        </div>
     </div>
     <br/>
     <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
