--- a/RMS.App/Views/Employees/Index.cshtml
+++ b/RMS.App/Views/Employees/Index.cshtml
@@ -21,26 +21,13 @@
             @Html.Raw(TempData["msg"])
         </div>
     }
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-5 col-sm-5 col-5 text-left no-padding">
-                <p>
-                    @Html.ActionLink("Create Employee", "Create", null, new { @class = "btn btn-success" }) &nbsp;
-                    @Html.ActionLink("Create Driver", "CreateDriver", null, new { @class = "btn btn-success" })
-                </p>
-            </div>
+    <div class="row">
+        <p>
+            
+            @Html.ActionLink("Create Employee", "Create", null, new {@class = "btn btn-success"}) &nbsp;
+            @Html.ActionLink("Create Driver", "CreateDriver", null, new {@class = "btn btn-success"})
+        </p>
 
-            @*<div class="col-lg-9 col-sm-9 col-9 text-right no-padding">
-                <p>
-                    @using (Html.BeginForm("Index", "Employees", FormMethod.Get))
-                    {
-                        <b>Search by (Name/Contact/NID/Mail/Type) </b>
-                        @Html.TextBox("searchText")
-                        <input type="submit" value="Search" />
-                    }
-                </p>
-            </div>*@
-        </div>
     </div>
     <br/>
 
@@ -140,7 +127,7 @@
                     else
                     {
                         <tr>
-                            <td class="text-center text-danger" colspan="8"> Data Not Found!</td>
+                            <td class="text-center text-danger" colspan="12"> Data Not Found!</td>
                         </tr>
                     }
                 }
