--- a/RMS.App/Views/Organizations/Index.cshtml
+++ b/RMS.App/Views/Organizations/Index.cshtml
@@ -21,26 +21,11 @@
         </div>
     }
 
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
+    <div class="row">
+
                 <p>
                     @Html.ActionLink("Create New", "Create", null, htmlAttributes: new { @class = "btn btn-success" })
                 </p>
-            </div>
-
-            @*<div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
-                <p>
-                    @using (Html.BeginForm("Index", "Organizations", FormMethod.Get))
-                    {
-                        <b>Search by (Name/Code/Reg No)</b>
-                        @Html.TextBox("searchText")
-                        <input type="submit" value="Search" />
-                    }
-                </p>
-
-            </div>*@
-        </div>
     </div>
     <br/>
     <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
