--- a/RMS.App/Views/Requisitions/Index.cshtml
+++ b/RMS.App/Views/Requisitions/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "All Requisitions";
-    //Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
 @section styles
 {
@@ -12,11 +12,11 @@
     <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />
 
 }
-<h2>All Requisitions</h2>
-<hr/>
+
 
 <div class="container">
-
+    <h2>All Requisitions</h2>
+    <hr />
 
     @if (TempData["msg"] != null)
     {
@@ -32,26 +32,16 @@
                 </p>
             </div>
 
-            @*<div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
-                <p>
-                    @using (Html.BeginForm("Index", "Requisitions", FormMethod.Get))
-                    {
-                        <b>Search by : </b>
-                        @Html.TextBox("searchText")
-                        <input type="submit" value="Search" />
-                    }
-                </p>
-            </div>*@
         </div>
     </div>
     <br/>
-    <div class="row">
+
         <table id="example1" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
             <thead>
             <tr class="bg-info">
-                <td>
+                <th>
                     SL
-                </td>
+                </th>
                 <th>
                     @Html.DisplayNameFor(model => model.RequisitionNumber)
                 </th>
@@ -73,11 +63,9 @@
                 <th>
                     @Html.DisplayNameFor(model => model.EndDateTime)
                 </th>
-
-
-                @*<th>
-                            Action
-                        </th>*@
+                <th>
+                    Action
+                </th>
             </tr>
             </thead>
             <tbody>
@@ -114,16 +102,13 @@
                                 @Html.DisplayFor(modelItem => item.EndDateTime)
                             </td>
 
-
-                            @*<td>
-                                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
-                                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" })
-                                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-outline-danger btn-sm" })
-                                    </td>*@
                             <td>
+                                @*@Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
+                                @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" })
+                                @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-outline-danger btn-sm" })*@
+                                @Html.ActionLink("Feedback", "Feedback", new { requisitionId = item.Id },new {@class="btn btn-outline-success"})
+                             </td>
 
-                                @Html.ActionLink("Feedback", "Feedback", new {requisitionId = item.Id})
-                            </td>
                         </tr>
                     }
                 }
@@ -137,9 +122,9 @@
             </tbody>
             <tfoot>
             <tr class="bg-secondary text-white">
-                <td>
+                <th>
                     SL
-                </td>
+                </th>
                 <th>
                     @Html.DisplayNameFor(model => model.RequisitionNumber)
                 </th>
@@ -161,30 +146,24 @@
                 <th>
                     @Html.DisplayNameFor(model => model.EndDateTime)
                 </th>
-
                 <th>
-                    @Html.DisplayNameFor(model => model.SubmitDateTime)
+                    Action
                 </th>
-
-                @*<th>
-                            Action
-                        </th>*@
             </tr>
             </tfoot>
         </table>
-    </div>
+
 </div>
+
 
 @section scripts
 {
-
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
     <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
 
     <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap.min.js"></script>
-
 
     <script>
         $(document).ready(function () {
