--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -85,7 +85,7 @@
                                     </div>
                                     <div id="demo4" class="col-md-12 col-12 collapse clearfix" style="margin-left: 35px;">
                                         @Html.ActionLink("Create New", "Create", "Designations")<br/>
-                                        @Html.ActionLink("List Of Employee", "Index", "Designations")
+                                        @Html.ActionLink("Employee Designation List", "Index", "Designations")
                                     </div>
                                 </div>
                                 <br/><br/>
@@ -94,7 +94,7 @@
                                         <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo5"><i class="fa fa-user" aria-hidden="true"></i> Employee Type</a><br/>
                                     </div>
                                     <div id="demo5" class="col-md-12 col-12 collapse clearfix" style="margin-left: 35px;">
-                                        @Html.ActionLink("List Of Employee", "Index", "EmployeeTypes")
+                                        @Html.ActionLink("Employee Type List", "Index", "EmployeeTypes")
                                     </div>
                                 </div>
                                 <br/><br/>
@@ -118,14 +118,14 @@
                                         @Html.ActionLink("Driver List", "GetAllDriver", "Employees")
                                     </div>
                                 </div>
-                                <br /><br />
+                                <br/><br/>
                                 <div class="col-md-12" style="font-size: 16px;">
                                     <div class="col-md-12 col-12">
                                         <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo8"><i class="fa fa-car" aria-hidden="true"></i> Vehicle Type</a><br/>
                                     </div>
                                     <div id="demo8" class="col-md-12 col-12 collapse clearfix" style="margin-left: 35px;">
                                         @Html.ActionLink("Create New", "Create", "VehicleTypes")<br/>
-                                        @Html.ActionLink("List Of Vehile Type", "Index", "VehicleTypes")
+                                        @Html.ActionLink("Vehile Type List", "Index", "VehicleTypes")
                                     </div>
                                 </div>
                                 <br/><br/>
@@ -135,12 +135,12 @@
                                     </div>
                                     <div id="demo9" class="col-md-12 col-12 collapse clearfix" style="margin-left: 35px;">
                                         @Html.ActionLink("Create New", "Create", "Vehicles")<br/>
-                                        @Html.ActionLink("List Of Vehicle", "Index", "Vehicles")
+                                        @Html.ActionLink("Vehicle List", "Index", "Vehicles")
                                     </div>
                                 </div>
-                                <br/><br/>
+                               
                             </div>
-
+                            <br/>
                         }
                             <!--Requisition Que-->
                             @if (User.IsInRole("Controller")|| User.IsInRole("Administrator"))
