--- a/RMS.App/Views/Vehicles/Index.cshtml
+++ b/RMS.App/Views/Vehicles/Index.cshtml
@@ -21,25 +21,13 @@
             @Html.Raw(TempData["msg"])
         </div>
     }
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-3 col-sm-3 col-3 header-top-left no-padding">
-                <p>
-                    @Html.ActionLink("Create New", "Create", null, new {@class = "btn btn-success"})
-                </p>
-            </div>
+    <div class="row">
 
-            @*<div class="col-lg-9 col-sm-9 col-9 text-right no-padding">
-                <p>
-                    @using (Html.BeginForm("Index", "Vehicles", FormMethod.Get))
-                    {
-                        <b>Search by (Type/Brand/Model/Reg No/Chassis no/Seat ) </b>
-                        @Html.TextBox("searchText")
-                        <input type="submit" value="Search" />
-                    }
-                </p>
-            </div>*@
-        </div>
+        <p>
+            
+            @Html.ActionLink("Create New", "Create", null, new {@class = "btn btn-success"})
+        </p>
+
     </div>
     <br/>
     <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
