Requisition Details with Related Information

--- a/RMS.App/Views/AssignRequisitions/OnProcess.cshtml
+++ b/RMS.App/Views/AssignRequisitions/OnProcess.cshtml
@@ -98,8 +98,8 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.Requisition.SubmitDateTime)
                             </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.StatusType, new { @class = "text-danger" })
+                            <td class="text-danger bold">
+                                @Html.DisplayFor(modelItem => item.StatusType)
                             </td>
                             <td>
 
