--- a/RMS.App/Views/Requisitions/Details.cshtml
+++ b/RMS.App/Views/Requisitions/Details.cshtml
@@ -133,7 +133,7 @@
         {
 
             <div class="col-md-2">@Html.DisplayName("Exaplanation")</div>
-            <div class="col-md-10">@cancelInformation.Reason</div>
+            <div class="col-md-10 text-heading text-danger">@cancelInformation.Reason</div>
 
            
         }
