--- a/RMS.App/Views/Requisitions/RequisitionList.cshtml
+++ b/RMS.App/Views/Requisitions/RequisitionList.cshtml
@@ -88,7 +88,7 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.Requisition.EndDateTime)
                         </td>
-                        <td>
+                        <td class="text-lg-center text-danger">
                             @Html.DisplayFor(modelItem => item.StatusType)
                         </td>
                         <td>
