--- a/RMS.App/Views/GatePass/CheckIn.cshtml
+++ b/RMS.App/Views/GatePass/CheckIn.cshtml
@@ -4,8 +4,9 @@
     ViewBag.Title = "Check-Out";
 }
 
-<h2>Check-Out</h2>
+<h2>Check-In</h2>
 <hr />
+
 
 @using (Html.BeginForm())
 {
@@ -19,7 +20,7 @@
         <div class="form-group row">
             @Html.LabelFor(model => model.StatusType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-5">
-                @Html.EditorFor(model => model.StatusType, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.StatusType, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 @Html.ValidationMessageFor(model => model.StatusType, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -27,12 +28,61 @@
         <div class="form-group row">
             @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-5">
-                @Html.EditorFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group row">
+            @Html.LabelFor(model => model.Requisition.Employee.FullName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.Requisition.Employee.FullName, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                @Html.ValidationMessageFor(model => model.Requisition.Employee.FullName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group row">
+            @Html.LabelFor(model => model.Requisition.Employee.Designation.Title, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.Requisition.Employee.Designation.Title, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                @Html.ValidationMessageFor(model => model.Requisition.Employee.Designation.Title, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group row">
+            @Html.LabelFor(model => model.Requisition.FromPlace, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.Requisition.FromPlace, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                @Html.ValidationMessageFor(model => model.Requisition.FromPlace, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group row">
+            @Html.LabelFor(model => model.Requisition.DestinationPlace, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.Requisition.DestinationPlace, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                @Html.ValidationMessageFor(model => model.Requisition.DestinationPlace, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group row">
+            @Html.LabelFor(model => model.Requisition.RequisitionType, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.Requisition.RequisitionType, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                @Html.ValidationMessageFor(model => model.Requisition.RequisitionType, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group row">
+            @Html.LabelFor(model => model.Requisition.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.Requisition.Description, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                @Html.ValidationMessageFor(model => model.Requisition.Description, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+
+        <div class="form-group row" hidden="hideen">
             @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-5">
                 @Html.EditorFor(model => model.RequisitionId, new { htmlAttributes = new { @class = "form-control" } })
@@ -40,15 +90,17 @@
             </div>
         </div>
 
+
         <div class="form-group row">
             <div class="col-md-2"></div>
             <div class="col-md-5">
-                <input type="submit" value="Check In" class="btn btn-success" /> &nbsp;
-                @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info" })
+                <input type="submit" value="CheckIn" class="btn btn-warning" /> &nbsp;
+                @Html.ActionLink("Back to List", "Requests", null, new { @class = "btn btn-info" })
             </div>
         </div>
     </div>
 }
+
 
 
 
