--- a/RMS.App/Views/GatePass/CheckOut.cshtml
+++ b/RMS.App/Views/GatePass/CheckOut.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -19,7 +19,7 @@
         <div class="form-group row">
             @Html.LabelFor(model => model.StatusType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-5">
-                @Html.EditorFor(model => model.StatusType, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.StatusType, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 @Html.ValidationMessageFor(model => model.StatusType, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -27,12 +27,61 @@
         <div class="form-group row">
             @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-5">
-                @Html.EditorFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group row">
+            @Html.LabelFor(model => model.Requisition.Employee.FullName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.Requisition.Employee.FullName, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                @Html.ValidationMessageFor(model => model.Requisition.Employee.FullName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group row">
+            @Html.LabelFor(model => model.Requisition.Employee.Designation.Title, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.Requisition.Employee.Designation.Title, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                @Html.ValidationMessageFor(model => model.Requisition.Employee.Designation.Title, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group row">
+            @Html.LabelFor(model => model.Requisition.FromPlace, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.Requisition.FromPlace, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                @Html.ValidationMessageFor(model => model.Requisition.FromPlace, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group row">
+            @Html.LabelFor(model => model.Requisition.DestinationPlace, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.Requisition.DestinationPlace, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                @Html.ValidationMessageFor(model => model.Requisition.DestinationPlace, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group row">
+            @Html.LabelFor(model => model.Requisition.RequisitionType, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.Requisition.RequisitionType, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                @Html.ValidationMessageFor(model => model.Requisition.RequisitionType, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group row">
+            @Html.LabelFor(model => model.Requisition.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.Requisition.Description, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                @Html.ValidationMessageFor(model => model.Requisition.Description, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        
+        <div class="form-group row" hidden="hideen">
             @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-5">
                 @Html.EditorFor(model => model.RequisitionId, new { htmlAttributes = new { @class = "form-control" } })
@@ -40,11 +89,12 @@
             </div>
         </div>
 
+
         <div class="form-group row">
             <div class="col-md-2"></div>
             <div class="col-md-5">
-                <input type="submit" value="Check Out" class="btn btn-success"/> &nbsp;
-                @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
+                <input type="submit" value="CheckOut" class="btn btn-warning" /> &nbsp;
+                @Html.ActionLink("Back to List", "Requests", null, new { @class = "btn btn-info" })
             </div>
         </div>
     </div>
