--- a/RMS.App/Views/Queue/RequisitionQueue.cshtml
+++ b/RMS.App/Views/Queue/RequisitionQueue.cshtml
@@ -6,30 +6,12 @@
 
 <h2>Requisition Queue</h2>
 <ol class="breadcrumb">
-    <li class="breadcrumb-item">
-        <a href="#">Dashboard</a>
-    </li>
+    
     <li class="breadcrumb-item active">My Dashboard</li>
 </ol>
 <!-- Icon Cards-->
 <div class="row">
-    <div class="col-xl-3 col-sm-6 mb-3">
-        <div class="card text-white bg-primary o-hidden h-100">
-            <div class="card-body">
-                <div class="card-body-icon">
-                    <i class="fa fa-fw fa-list"></i>
-                </div>
-                <div class="mr-5">Total @ViewBag.RequisitionCount Requisition</div>
-            </div>
 
-            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("Index", "Requisitions")">
-                <span class="float-left">View Details</span>
-                <span class="float-right">
-                    <i class="fa fa-angle-right"></i>
-                </span>
-            </a>
-        </div>
-    </div>
     <div class="col-xl-3 col-sm-6 mb-3">
         <div class="card text-white bg-warning o-hidden h-100">
             <div class="card-body">
@@ -38,7 +20,7 @@
                 </div>
                 <div class="mr-5">@ViewBag.RequisitionStatusCount New Requisition!</div>
             </div>
-            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("Create", "AssignRequisitions",new {requisitionId=0})">
+            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("Requests", "AssignRequisitions",new {requisitionId=0})">
                 <span class="float-left">View Details</span>
                 <span class="float-right">
                     <i class="fa fa-angle-right"></i>
@@ -46,15 +28,34 @@
             </a>
         </div>
     </div>
+
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <div class="card text-white bg-primary o-hidden h-100">
+            <div class="card-body">
+                <div class="card-body-icon">
+                    <i class="fa fa-fw fa-list"></i>
+                </div>
+                <div class="mr-5">@ViewBag.CompleteRequisition Requisitions Served</div>
+            </div>
+
+            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("CompleteRequest", "AssignRequisitions")">
+                <span class="float-left">View Details</span>
+                <span class="float-right">
+                    <i class="fa fa-angle-right"></i>
+                </span>
+            </a>
+        </div>
+    </div>
+
     <div class="col-xl-3 col-sm-6 mb-3">
         <div class="card text-white bg-success o-hidden h-100">
             <div class="card-body">
                 <div class="card-body-icon">
                     <i class="fa fa-fw fa-shopping-cart"></i>
                 </div>
-                <div class="mr-5">@ViewBag.CompleteRequisition Completed Requisition!</div>
+                <div class="mr-5">@ViewBag.CancelRequisition Cancelled Requisition!</div>
             </div>
-            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("CompleteRequest", "AssignRequisitions")">
+            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("Index", "CancelRequisition")">
                 <span class="float-left">View Details</span>
                 <span class="float-right">
                     <i class="fa fa-angle-right"></i>
@@ -68,7 +69,7 @@
                 <div class="card-body-icon">
                     <i class="fa fa-fw fa-support"></i>
                 </div>
-                <div class="mr-5">@ViewBag.OnProcessRequest  On Process Request</div>
+                <div class="mr-5">@ViewBag.OnProcessRequest On Process Request</div>
             </div>
             <a class="card-footer text-white clearfix small z-1" href="@Url.Action("OnProcess", "AssignRequisitions")">
                 <span class="float-left">View Details</span>
