--- a/RMS.App/Views/Requisitions/Reply.cshtml
+++ b/RMS.App/Views/Requisitions/Reply.cshtml
@@ -33,6 +33,14 @@
             </div>
         </div>
 
+
+        <div class="form-group row" hidden="hidden">
+            @Html.LabelFor(model => model.EmployeeId, htmlAttributes: new { @class = "control-label col-md-12" })
+            <div class="col-md-3">
+                @Html.EditorFor(model => model.EmployeeId, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+
         <div class="form-group row">
             <div class="col-md-5">
                 <input type="submit" value="Reply" class="btn btn-primary"/> &nbsp;
