--- a/RMS.App/Views/Home/Index.cshtml
+++ b/RMS.App/Views/Home/Index.cshtml
@@ -4,34 +4,50 @@
 }
 
 <div class="jumbotron">
-    <h1>Professional Diploma in Web Applications Development (.Net Framework) </h1>
-    <p class="lead">Batch-01</p>
-    <p>
-        Effective teachers are the most important factor contributing to student achievement. Sometimes it can be difficult to find the right words to say to someone who means so much to you.
-        You have been an exemplary and visionary mentor, a great leader who has dedicated his life to the service of humanity. I appreciate and treasure everything you have taught me.
-        Not only have you been a fantastic mentor to me, but you have taught ... Thanks for opening my eyes to new stages of opportunity and strength. ... Thank you for showing me how to stand my ground and have the kind of career .
+    <h1> Requisition Management System </h1>
+    <br/>
+    <br/>
+    <p class="lead">
+        Save time and eliminate paperwork by automating the requisition Process.
+        Authorize Users can submit their requisition by using web Interface.
+        Automate the entire process including Requisition which is currently doing by Paperwork.
+         As well as Employee, Driver, Vehicle also save as Database which is play an important role in any organization.
     </p>
     <p><a href="#" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h4>Overview of Functional Requirements</h4>
         <p>
-            Effective teachers are the most important factor contributing to student achievement. Sometimes it can be difficult to find the right words to say to someone who means so much to you.
-            You have been an exemplary and visionary mentor, a great leader who has dedicated his life to the service of humanity. I appreciate and treasure everything you have taught me.
-            Not only have you been a fantastic mentor to me, but you have taught ... Thanks for opening my eyes to new stages of opportunity and strength. ... Thank you for showing me how to stand my ground and have the kind of career .
+            Authorized users must be able to login with their identification number or user name and password.
+            After a successful login the user only view and do an operation which is authorized by the system controller.
+            After the login user (Employee) may do some operations, Like- submit a request, view request, Delete or cancel the request, etc.
+            After the login user (Vehicle Controller) may do some operations, Like- approve a request, assign vehicle on request, cancel or delete request, etc.
+
         </p>
         <p><a class="btn btn-default" href="#">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <h4>Mission & Vision </h4>
+        <p>
+            Enable Requisition to focus on strategic objectives and realize operational efficiencies with technology that promotes great user experience.
+
+            Vision:
+
+            To establish e-requisition as the go-to provider with innovative and affordable regional solutions.
+        </p>
         <p><a class="btn btn-default" href="#">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+        <h4>Scope of the System</h4>
+        <p>
+
+    The project aims at providing an efficient interface to the BCC for managing their vehicle requisition based on current manual process in automate. The basic idea involved here is that vehicle and employee, driver are stored in a database. When system get a requisition request, the system analyzes the schedule, vehicle, availability of driver in database and send it to the vehicle manager (admin) for approval.
+
+    We also propose to include a feature “Feedback”. This feature keeps track of any objection from vehicle user or any inquiry to the vehicle manager and also from vehicle manager to the vehicle user about any instruction.
+.
+        </p>
         <p><a class="btn btn-default" href="#">Learn more &raquo;</a></p>
     </div>
 </div>
