--- a/RMS.App/Views/Shared/_LayoutHome.cshtml
+++ b/RMS.App/Views/Shared/_LayoutHome.cshtml
@@ -69,45 +69,7 @@
 
             </div>
         </div>
-        @*<br/>
-        <div class="row">
-            <div class="col-lg-3 col-md-6">
-                <div class="single-service">
-                    <img class="img-fluid" src="~/Content/img/ict.jpg" alt="">
-                    <a href="#"><h4>Popular Use Of The Internet</h4></a>
-                    <p>
-                        inappropriate behavior is oftenlaug hed off as “boys will be boys,” women face higher conduct women face higher conduct.
-                    </p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <div class="single-service">
-                    <img class="img-fluid" src="~/Content/img/ict.jpg" alt="">
-                    <a href="#"><h4>Protective Preventative</h4></a>
-                    <p>
-                        inappropriate behavior is oftenlaug hed off as “boys will be boys,” women face higher conduct women face higher conduct.
-                    </p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <div class="single-service">
-                    <img class="img-fluid" src="~/Content/img/ict.jpg" alt="">
-                    <a href="#"><h4>Download Free Songs</h4></a>
-                    <p>
-                        inappropriate behavior is oftenlaug hed off as “boys will be boys,” women face higher conduct women face higher conduct.
-                    </p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <div class="single-service">
-                    <img class="img-fluid" src="~/Content/img/ict.jpg" alt="">
-                    <a href="#"><h4>A Discount Toner Cartridge</h4></a>
-                    <p>
-                        inappropriate behavior is oftenlaug hed off as “boys will be boys,” women face higher conduct women face higher conduct.
-                    </p>
-                </div>
-            </div>
-        </div>*@
+       
     </div>
 </section>
 <!-- End service Area -->
@@ -118,12 +80,12 @@
         <div class="row">
             <div class="col-lg-2  col-md-6">
                 <div class="single-footer-widget">
-                    <h6>Top Products</h6>
+                    <h6>Anther Link of Bcc</h6>
                     <ul class="footer-nav">
-                        <li><a href="#">Managed Website</a></li>
-                        <li><a href="#">Manage Reputation</a></li>
-                        <li><a href="#">Power Tools</a></li>
-                        <li><a href="#">Marketing Service</a></li>
+                        <li><a href="#">BCC</a></li>
+                        <li><a href="#">BKIICT</a></li>
+                        <li><a href="#">Another Link</a></li>
+                        <li><a href="#">Another Link</a></li>
                     </ul>
                 </div>
             </div>
@@ -131,7 +93,7 @@
                 <div class="single-footer-widget mail-chimp">
                     <h6 class="mb-20">Contact Us</h6>
                     <p>
-                        56/8, bir uttam qazi nuruzzaman road, west panthapath, kalabagan, Dhanmondi, Dhaka - 1205
+                        BCC Bhaban, E-14/X, Statistics Road, Dhaka 1207
                     </p>
                     <h3>012-6532-568-9746</h3>
                     <h3>012-6532-568-97468</h3>
