--- a/RMS.App/Views/Shared/_LoginPartial.cshtml
+++ b/RMS.App/Views/Shared/_LoginPartial.cshtml
@@ -14,7 +14,9 @@
             </button>
             <ul class="dropdown-menu">
                 <li>@Html.ActionLink("My Profile", "Index", "Account")</li>
-                <li>@Html.ActionLink("My Requisition", "Create", "Requisitions")</li>
+               
+                    <li>@Html.ActionLink("My Requisition", "Create", "Requisitions")</li>
+             
                 <li><a href="javascript:document.getElementById('logoutForm').submit()">Log Out</a></li>
             </ul>
         </div>
@@ -23,6 +25,6 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" , @class="btn btn-sm btn-outline-info bg-transparent text-white"})</li>
+        <li>@Html.ActionLink("  Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" , @class= "btn btn-sm btn-outline-info bg-transparent text-white fa fa-user" })</li>
     </ul>
 }
