--- a/RMS.App/Views/Account/Login.cshtml
+++ b/RMS.App/Views/Account/Login.cshtml
@@ -7,17 +7,29 @@
     Layout = "~/Views/Shared/_LayoutLogIn.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 <div class="row">
-    <div class="col-md-8">
+
+
+    <div class="col-md-6">
+        <div class="login100-pic js-tilt" data-tilt="" style="will-change: transform; transform: perspective(300px) rotateX(0deg) rotateY(0deg);">
+            <img src="~/Content/img/login_user.png">
+        </div>
+        
+    </div>
+
+    
+    @*mid*@
+
+    <div class="col-md-6">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
 
                 <h4>Use a local account to log in.</h4>
-                <hr/>
+                <hr />
 
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -45,16 +57,37 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                        <input type="submit" value="Log in" class="btn btn-lg btn-outline-info fa fa-user" />
                     </div>
                 </div>
-                
+
             }
         </section>
     </div>
-    
+    <div class="col-md-12">
+        <h4>Login Secret</h4><br/>
+        <p class="text-danger">
+            Enter your Email and password, then click login. First time browser will be asked to Save account information by your browser.
+            If you are Indifferent as like as simply click this butto which you help to remember the email and password...
+            By clicking login if you are valid user you can find different action which is helpful for your work....Thanks...
+        </p>
+        <p>
+            To maintain a secure account, you should change your password often.
+        </p>
+        <h4>Log Out</h4><br/>
+        <p>
+            If you have not manually clicked on Logout from within NetDocuments, you will be logged out automatically when your activity has been idle for 90 minutes.
+             You are also logged out officially if you just close your browser session rather than clicking the Logout link. 
+        </p>
+    </div>
+  
+
 </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+
+
+
