--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -114,7 +114,25 @@
                                 </div>
                                 <br/><br/>
                             </div>
-
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h3 class="text-dark">
+                                        <i class="fa fa-envelope-open" aria-hidden="true"></i> Report
+                                    </h3>
+                                    <hr/>
+                                </div>
+                                <br/><br/>
+                                <div class="col-md-12" style="font-size: 16px;">
+                                    <div class="col-md-12 col-12">
+                                        <a href="#" class="text-black font-weight-normal" data-toggle="collapse" data-target="#report"><i class="fa fa-envelope-o" aria-hidden="true"></i> Report</a><br/>
+                                    </div>
+                                    <div id="report" class="col-md-12 col-12 collapse clearfix" style="margin-left: 35px;">
+                                        @Html.ActionLink("Assign Requisition", "ReportIndex", "AssignRequisitions")<br/>
+                                        
+                                    </div>
+                                </div>
+                                <br/><br/>
+                            </div>
                         }
                     </div>
 
